--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <P> i am doing my first website ever </P> 
    <h1> hello world i am coming tomyou very soon</h1>
    <b> hello boys</b>
-   <b>i am here to see u broo</b>git
+   <b>i am here to see u broo</b>
+<b>i am herre to know you bro git hub</b>
 </body>
 </html>
