--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
    <b> hello boys</b>
    <b>i am here to see u broo</b>
 <b>i am herre to know you bro git hub</b>
+<p>hyper text language is a langage which is used to make websibsite </p>
+<p> http hyper text transfer protocaol</p>
 </body>
 </html>
